Fix image is stretched in detail page

--- a/bookshelter-app/src/components/MainContentSection/index.module.css
+++ b/bookshelter-app/src/components/MainContentSection/index.module.css
@@ -8,8 +8,8 @@
 }
 
 .imgBook {
-  width: 430px;
-  height: 230px;
+  max-width: 100%; /* Giới hạn chiều rộng tối đa bằng 100% của phần tử chứa */
+  height: auto; /* Giữ tỷ lệ khung hình */
 }
 
 .description {
